--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@
 /* text on axis */
 .axisSubtitle {
     font-family: 'Montserrat', sans-serif;
-    font-weight: bold;
+    /* font-weight: bold; */
 }
 
 /* map */
