--- a/style.css
+++ b/style.css
@@ -1,16 +1,21 @@
 /* alligning divs */
-.first-container .box{
+
+.first-container .box {
     width: 1500;
     height: 350;
 }
-.first-container .box .box-row { 
-    display:table-row; 
-} 
-.first-container .box .box-cell { 
-    display:table-cell; 
-    width:25%; 
-    padding:10px; 
-} 
+
+.first-container .box .box-row {
+    display: table-row;
+}
+
+.first-container .box .box-cell {
+    display: table-cell;
+    width: 25%;
+    padding: 10px;
+}
+
+
 /* .first-container .box .box-cell.box1 { 
     border: solid red;
 } 
@@ -21,10 +26,12 @@
     border: solid red;
 } */
 
+
 /* html title */
+
 .title {
     font-family: 'Montserrat', sans-serif;
-    margin-top:  1px;
+    margin-top: 1px;
     margin-bottom: 0.5px;
     margin-left: 0px;
     margin-right: 0px;
@@ -35,50 +42,55 @@
     font-size: 20px;
     text-anchor: middle;
     text-align: center;
-    margin-top:  1px;
+    margin-top: 1px;
     margin-bottom: 0.5px;
     margin-left: 0px;
     margin-right: 0px;
 }
 
+
 /* text on axis */
+
 .axisSubtitle {
     font-family: 'Montserrat', sans-serif;
     /* font-weight: bold; */
 }
 
+
 /* map */
+
 .paths-map {
     fill: steelblue;
 }
 
+
 /* Linechart */
+
 .line-lineplot {
     fill: none;
     stroke-width: 2px;
 }
 
+
 /* tooltip for hovering */
+
 .tooltip {
     position: absolute;
     text-align: center;
-
     border: 0px;
     border-radius: 5px;
-    
     opacity: 0.5;
     background: black;
     color: white;
     fill: white;
-
     font-family: 'Montserrat', sans-serif;
     font-size: 10px;
-    
     padding: 5px;
     border-color: white;
     border-width: 1px;
     border-style: solid;
 }
+
 
 /* body {
     background-image: url("adrien-olichon-ilVYjf0J378-unsplash.jpg");
@@ -105,7 +117,9 @@
 
 /* #main-title {
     /* ocupa 24.5 */
-    /*font-family: Georgia, serif;
+
+
+/*font-family: Georgia, serif;
     font-size: 24px;
     color: black;
     text-align: left;
@@ -116,6 +130,7 @@
     position: relative;
     left: 15.5px;
 } */
+
 
 /* #selectbutton {
     top: 51px;
@@ -128,3 +143,36 @@
 #mySelect {
     padding: 10px;
 } */
+
+.d3-tip {
+    line-height: 1;
+    font-weight: bold;
+    padding: 12px;
+    background: rgba(0, 0, 0, 0.8);
+    color: #fff;
+    border-radius: 2px;
+}
+
+
+/* Creates a small triangle extender for the tooltip */
+
+.d3-tip:after {
+    box-sizing: border-box;
+    display: inline;
+    font-size: 10px;
+    width: 100%;
+    line-height: 1;
+    color: rgba(0, 0, 0, 0.8);
+    content: "\\25BC";
+    position: absolute;
+    text-align: center;
+}
+
+
+/* Style northward tooltips differently */
+
+.d3-tip.n:after {
+    margin: -1px 0 0 0;
+    top: 100%;
+    left: 0;
+}
