--- a/style.css
+++ b/style.css
@@ -1,31 +1,28 @@
-/* alligning divs */
-.first-container .box{
-    width: 1500;
-    height: 350;
-}
-.first-container .box .box-row { 
-    display:table-row; 
-} 
-.first-container .box .box-cell { 
-    display:table-cell; 
-    width:25%; 
-    padding:10px; 
-} 
-/* .first-container .box .box-cell.box1 { 
-    border: solid red;
-} 
-.first-container .box .box-cell.box2 { 
-    border: solid red;
-} 
-.first-container .box .box-cell.box3 { 
-    border: solid red;
+/* divs */
+/* .grid-cell {
+    margin: 20px;
 } */
+
+.btn {
+    width: 100px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
+    padding: 10px;
+    /* border: solid 1px black; */
+    color: white;
+    border-radius: 5px;
+}
+
+#reset {
+    background-color: gray;
+}
+
 
 /* html title */
 .title {
     font-family: 'Montserrat', sans-serif;
     margin-top:  1px;
-    margin-bottom: 0.5px;
+    margin-bottom: 1px;
     margin-left: 0px;
     margin-right: 0px;
 }
@@ -79,52 +76,3 @@
     border-width: 1px;
     border-style: solid;
 }
-
-/* body {
-    background-image: url("adrien-olichon-ilVYjf0J378-unsplash.jpg");
-    margin: 0px;
-    background-color: rgb(7, 8, 7);
-    background-position: center;
-    
-    background-repeat: no-repeat;
-
-    background-size: cover;
- 
-} */
-
-
-/* /* 
-#grid {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: flex-start;
-    align-content: center;
-} */
-
-
-/* #main-title {
-    /* ocupa 24.5 */
-    /*font-family: Georgia, serif;
-    font-size: 24px;
-    color: black;
-    text-align: left;
-    margin-top: 10.5px;
-    margin-bottom: 0.5px;
-    margin-left: 0px;
-    margin-right: 0px;
-    position: relative;
-    left: 15.5px;
-} */
-
-/* #selectbutton {
-    top: 51px;
-    position: fixed;
-    left: 16.5px;
-    cursor: pointer;
-    display: inline-block;
-}
-
-#mySelect {
-    padding: 10px;
-} */
