animacao mm gusti

--- a/style.css
+++ b/style.css
@@ -85,7 +85,8 @@
 /* Network link*/
 .network-link {
     fill: steelblue;
-    stroke:#aaa
+    stroke:#aaa;
+    opacity:1;
 }
 
 /* Network node */
